[package]
name = "embed_code"
version = "0.1.0"
edition = "2021"
authors = ["susumOyaji <sumitomo0210@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http'] }
worker-macros = { version = "0.6", features = ['http'] }
futures = "0.3"
regex = "1"
scraper = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3", features = ["wasm_js"] }
